kubernetes/nginx/daemonset.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nginx-dmn
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-dmn-pod
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        -  containerPort: 80
